--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,13 @@
 
 <nav>
   <ul>
-    <li><a href="#topSection">Top</a></li>
-    <li><a href="#careerTimelineSection">Career</a></li>
-    <li><a href="#technologiesSection">Technologies</a></li>
-    <li><a href="#projectsSection">Projects</a></li>
+    <li>
+      <!-- <span class="button"></span> -->
+      <a href="#topSection" target="_self">HOME</a>
+    </li>
+    <li><a href="#careerTimelineSection" target="_self">CAREER</a></li>
+    <li><a href="#technologiesSection" target="_self">TECH STACK</a></li>
+    <li><a href="#projectsSection" target="_self">PROJECTS</a></li>
   </ul>
 </nav>
 
@@ -15,9 +18,19 @@
   <a id="technologiesSection"></a>
   <a id="projectsSection"></a>
 
-
   <section id="topSection" class="full">
-    <h1>{{title}}</h1>
+
+
+    <div class="square">
+      <span class="l1"></span>
+       <span class="l2"></span>
+       <span class="l3"></span>
+       <span class="l4"></span>
+      <h1>{{title}} &nbsp;<span class="cursor">&nbsp;</span></h1>
+      <small>BCompSci, BSc(Pharm)</small>
+      <p>Android Developer, Web Developer</p>
+      <img src="assets/images/avatar2.jpg" class="avatar">
+    </div>
   </section>
 
   <section id="careerTimelineSection" class="full orange">
