--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<nav>
+<nav class="footer">
   <ul>
     <li>
       <!-- <span class="button"></span> -->
@@ -8,6 +8,17 @@
     <li><a href="#careerTimelineSection" target="_self">CAREER</a></li>
     <li><a href="#technologiesSection" target="_self">TECH STACK</a></li>
     <li><a href="#projectsSection" target="_self">PROJECTS</a></li>
+  </ul>
+</nav>
+
+<nav class="header">
+  <ul>
+    <li>
+      <a href="#" target="_self"><img class="social-icon" src="assets/images/facebook.png"></a>
+    </li>
+    <li>
+      <a href="#" target="_self"><img class="social-icon" src="assets/images/linkedin.png"></a>
+    </li>
   </ul>
 </nav>
 
