--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -71,19 +71,23 @@
             </li>
           </ul> -->
           <div class="ring">
-            <div class="led-container">
-              <div class="led"></div>
+            <div class="led-container-career">
+              <div class="led-career"></div>
+              <a id="led-overlay-career" href="#careerTimelineSection">
+                <div id="nav-hover-title-career">CAREER</div>
+              </a>
+            </div>
+
+            <div class="led-container-tech">
+              <div class="led-tech"></div>
+              <a id="led-overlay-tech" href="#technologiesSection">
+                <div id="nav-hover-title-tech">TECH STACK</div>
+              </a>
             </div>
 
 
-
-
-            <div class="inner-glow"></div>
+            <div class="inner-glow-career"></div>
             <div class="face"></div>
-            
-            <div id="led-overlay">
-              <div id="nav-hover-title">MY TITLE</div>
-            </div>
           </div>
 
         </nav>
