--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -86,7 +86,6 @@ li.square-grid-item a {
   font-family: 'Roboto Condensed', sans-serif;
   height: 50px;
   text-align: center;
-
   padding: 0;
   margin: 0;
   /*transform: scale(2,3);
@@ -94,10 +93,8 @@ li.square-grid-item a {
   -moz-transform: scale(2,3);
   -ms-transform: scale(2,3);
   -o-transform: scale(2,3);*/
-
-
-
 }
+
 .table {
   display: table;
   height: 100%;
@@ -111,26 +108,26 @@ li.square-grid-item a {
   display: table-cell;
 }
 
-.table-cell-career{
+.table-cell-career {
   color: grey;
-  background-color: rgba(255, 255, 255,0.5);
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
-.table-cell-projects{
+.table-cell-projects {
   color: white;
-  background-color: rgba(0, 0, 0,0.5);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
-.table-cell-hire{
+.table-cell-hire {
   color: grey;
-  background-color: rgba(255, 255, 255,0.5);
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
-
-.table-cell-tech-stack{
+.table-cell-tech-stack {
   color: white;
-  background-color: rgba(0, 0, 0,0.5);
+  background-color: rgba(0, 0, 0, 0.5);
 }
+
 
 /*.table-cell-white-top{
   background-color: rgba(255,255,255,0.5);
@@ -143,7 +140,6 @@ li.square-grid-item a {
   height:78px;
   width: 100%;
 }*/
-
 
 #topSection {
   position: relative;
@@ -290,56 +286,58 @@ li.square-grid-item a {
   }
 }
 
-
 .social-icon {
   height: 30px;
   width: 30px;
 }
 
+
 /* For scrollspy */
-#scrollspy-menu{
+
+#scrollspy-menu {
   position: fixed;
-  right:16px;
-  top:50%;
+  right: 16px;
+  top: 50%;
   z-index: 2;
 }
+
 #scrollspy-menu ul {
   list-style: none;
 }
+
 #scrollspy-menu ul li {
   width: 12px;
-	height: 12px;
+  height: 12px;
 }
-.scrollspy-menu__anchor{
+
+.scrollspy-menu__anchor {
   margin: 8px;
   border-radius: 50%;
   text-decoration: none;
   cursor: pointer;
-	transition: all .8s ease;
+  transition: all .8s ease;
   width: 12px;
-	height: 12px;
+  height: 12px;
   z-index: 30;
 }
-.scrollspy-menu__anchor--true{
+
+.scrollspy-menu__anchor--true {
   background: #ABFF00;
- box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, inset #89FF00 0 -1px 9px, #89FF00 0 2px 12px;
-
+  box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, inset #89FF00 0 -1px 9px, #89FF00 0 2px 12px;
 }
 
-.scrollspy-menu__anchor--false{
+.scrollspy-menu__anchor--false {
   width: 12px;
-	height: 12px;
-
-	background: #646464;
-
-	box-shadow: 0 0 4px #1C1C17;
-	transition: all .3s ease;
+  height: 12px;
+  background: #646464;
+  box-shadow: 0 0 4px #1C1C17;
+  transition: all .3s ease;
 }
+
 
 /*Ring*/
-*,
-*::before,
-*::after {
+
+*, *::before, *::after {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -351,8 +349,7 @@ li.square-grid-item a {
   position: absolute;
 }
 
-html,
-body {
+html, body {
   font-size: 100%;
   min-height: 100%;
 }
@@ -383,15 +380,15 @@ body {
   background: linear-gradient(to bottom, #050505, #060609);
 }
 
-.led-container{
+.led-container-career {
   height: 7em;
   width: 7em;
   position: absolute;
   top: 50%;
-  z-index: -4;
 }
 
-.led {
+.led-career {
+  display:none;
   height: 7em;
   width: 7em;
   z-index: -4;
@@ -404,17 +401,16 @@ body {
   background-color: #d7c6d4;
 }
 
-
-#nav-hover-title{
+#nav-hover-title-career {
   position: absolute;
   color: white;
-  top: 0;
+  bottom: 0;
   left: 0;
   z-index: 3;
-  display:none;
+  display: none;
 }
 
-.inner-glow {
+.inner-glow-career {
   height: 6.72em;
   width: 6.72em;
   position: absolute;
@@ -448,6 +444,7 @@ body {
   -webkit-box-shadow: inset 1px -1px 10px rgba(215, 198, 212, 0.2);
   box-shadow: inset 1px -1px 10px rgba(215, 198, 212, 0.2);
 }
+
 .face::before {
   height: 11.875em;
   width: 11.875em;
@@ -463,6 +460,7 @@ body {
   background: -webkit-linear-gradient(top right, #101312, #181114);
   background: linear-gradient(to bottom left, #101312, #181114);
 }
+
 .face::after {
   height: 13.4375em;
   width: 13.4375em;
@@ -480,7 +478,7 @@ body {
   background: linear-gradient(to bottom, #141f1b, #131014);
 }
 
-#led-overlay{
+#led-overlay-career {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -490,42 +488,150 @@ body {
   z-index: 10;
 }
 
-#led-overlay:hover > #nav-hover-title {
-  background-color: black;
+#led-overlay-career:hover>#nav-hover-title-career {
   color: white;
-  z-index:1000;
-  text-shadow: 0 0 10px rgba(215, 198, 212,1) , 0 0 20px rgba(215, 198, 212,1) , 0 0 30px rgba(215, 198, 212,1) , 0 0 40px rgba(215, 198, 212,1) , 0 0 70px rgba(215, 198, 212,1) , 0 0 80px rgba(215, 198, 212,1) , 0 0 100px rgba(215, 198, 212,1);
+  z-index: 1000;
+  text-shadow: 0 0 10px rgba(215, 198, 212, 1), 0 0 20px rgba(215, 198, 212, 1), 0 0 30px rgba(215, 198, 212, 1), 0 0 40px rgba(215, 198, 212, 1), 0 0 70px rgba(215, 198, 212, 1), 0 0 80px rgba(215, 198, 212, 1), 0 0 100px rgba(215, 198, 212, 1);
   /*display:none;*/
-  display:block;
+  display: block;
   -moz-animation: ontheblink 5s 1;
   -ms-animation: ontheblink 5s 1;
   -webkit-animation: ontheblink 5s 1;
   -moz-animation: ontheblink 5s 1;
   -ms-animation: ontheblink 5s 1;
   -webkit-animation: ontheblink 5s 1;
-
-}
-
-#led-overlay:hover  .ring {
-z-index:-5;
 }
 
 @-webkit-keyframes ontheblink {
-  21%,
-  39%,
-  45%,
-  47%,
-  53% {
+  21%, 39%, 45%, 47%, 53% {
     color: #fff;
     text-shadow: none;
   }
-  26%,
-  38%,
-  40%,
-  44%,
-  46%,
-  48% {
+  26%, 38%, 40%, 44%, 46%, 48% {
     color: #fff;
     text-shadow: 0 0 10px #fff, 0 0 20px #ff0, 0 0 30px #ff0;
   }
+}
+
+.led-container-tech {
+  height: 7em;
+  width: 7em;
+  position: absolute;
+  top: 0;
+}
+
+.led-tech {
+  display:none;
+  height: 7em;
+  width: 7em;
+  z-index: -4;
+  -moz-border-radius-topleft: 7em;
+  -webkit-border-top-left-radius: 7em;
+  border-top-left-radius: 7em;
+  -moz-box-shadow: 0 0 2em #d7c6d4;
+  -webkit-box-shadow: 0 0 2em #d7c6d4;
+  box-shadow: 0 0 2em #d7c6d4;
+  background-color: #d7c6d4;
+
+  -webkit-animation-name: drawtechborder;
+  -webkit-animation-delay: 0s;
+  -webkit-animation-duration: 3s;
+  -webkit-animation-iteration-count: 1;
+  -webkit-animation-timing-function: ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+}
+
+#nav-hover-title-tech {
+  position: absolute;
+  color: white;
+  top: 0;
+  left: 0;
+  z-index: 3;
+  display: none;
+}
+
+#led-overlay-tech {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  /*background: pink;*/
+  z-index: 10;
+}
+
+/*.inner-glow-tech {
+  height: 6.72em;
+  width: 6.72em;
+  position: absolute;
+  top: 0;
+  left: 0.3em;
+  -moz-border-radius-topleft: 7em;
+  -webkit-border-top-left-radius: 7em;
+  border-top-left-radius: 7em;
+  -moz-box-shadow: inset 0 0 2em rgba(215, 198, 212, 0.5), 0 0 2em rgba(215, 198, 212, 0.75);
+  -webkit-box-shadow: inset 0 0 2em rgba(215, 198, 212, 0.5), 0 0 2em rgba(215, 198, 212, 0.75);
+  box-shadow: inset 0 0 2em rgba(215, 198, 212, 0.5), 0 0 2em rgba(215, 198, 212, 0.75);
+  background-color: transparent;
+}*/
+
+#led-overlay-tech:hover>#nav-hover-title-tech {
+  color: white;
+  z-index: 1000;
+  text-shadow: 0 0 10px rgba(215, 198, 212, 1), 0 0 20px rgba(215, 198, 212, 1), 0 0 30px rgba(215, 198, 212, 1), 0 0 40px rgba(215, 198, 212, 1), 0 0 70px rgba(215, 198, 212, 1), 0 0 80px rgba(215, 198, 212, 1), 0 0 100px rgba(215, 198, 212, 1);
+  /*display:none;*/
+  display: block;
+  -moz-animation: ontheblink 5s 1;
+  -ms-animation: ontheblink 5s 1;
+  -webkit-animation: ontheblink 5s 1;
+  -moz-animation: ontheblink 5s 1;
+  -ms-animation: ontheblink 5s 1;
+  -webkit-animation: ontheblink 5s 1;
+}
+
+.led-container-career:hover > .led-career {
+  display:block;
+}
+
+.led-container-tech:hover > .led-tech{
+  display:block;
+}
+
+
+#led-overlay-hire {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  /*background: pink;*/
+  z-index: 10;
+}
+
+#led-overlay-hire:hover>#nav-hover-title-hire {
+  color: white;
+  z-index: 1000;
+  text-shadow: 0 0 10px rgba(215, 198, 212, 1), 0 0 20px rgba(215, 198, 212, 1), 0 0 30px rgba(215, 198, 212, 1), 0 0 40px rgba(215, 198, 212, 1), 0 0 70px rgba(215, 198, 212, 1), 0 0 80px rgba(215, 198, 212, 1), 0 0 100px rgba(215, 198, 212, 1);
+  /*display:none;*/
+  display: block;
+  -moz-animation: ontheblink 5s 1;
+  -ms-animation: ontheblink 5s 1;
+  -webkit-animation: ontheblink 5s 1;
+  -moz-animation: ontheblink 5s 1;
+  -ms-animation: ontheblink 5s 1;
+  -webkit-animation: ontheblink 5s 1;
+}
+
+#led-overlay-tech {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  /*background: pink;*/
+  z-index: 10;
+}
+
+.led-container-hire:hover > .led-hire{
+  display:block;
 }
