--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -560,7 +560,7 @@ body {
   z-index: 10;
 }
 
-/*.inner-glow-tech {
+.inner-glow-tech {
   height: 6.72em;
   width: 6.72em;
   position: absolute;
@@ -573,7 +573,7 @@ body {
   -webkit-box-shadow: inset 0 0 2em rgba(215, 198, 212, 0.5), 0 0 2em rgba(215, 198, 212, 0.75);
   box-shadow: inset 0 0 2em rgba(215, 198, 212, 0.5), 0 0 2em rgba(215, 198, 212, 0.75);
   background-color: transparent;
-}*/
+}
 
 #led-overlay-tech:hover>#nav-hover-title-tech {
   color: white;
@@ -598,13 +598,31 @@ body {
 }
 
 
+
+.led-container-hire {
+  height: 7em;
+  width: 7em;
+  position: absolute;
+  top: 0;
+  right:0;
+}
+
+#nav-hover-title-hire {
+  position: absolute;
+  color: white;
+  top: 0;
+  right: 0;
+  z-index: 3;
+  display: none;
+}
+
+
 #led-overlay-hire {
   width: 100%;
   height: 100%;
   position: absolute;
   top: 0;
-  left: 0;
-  /*background: pink;*/
+  right: 0;
   z-index: 10;
 }
 
@@ -622,14 +640,25 @@ body {
   -webkit-animation: ontheblink 5s 1;
 }
 
-#led-overlay-tech {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  /*background: pink;*/
-  z-index: 10;
+.led-hire {
+  display:none;
+  height: 7em;
+  width: 7em;
+  z-index: -4;
+  -moz-border-radius-topright: 7em;
+  -webkit-border-top-right-radius: 7em;
+  border-top-right-radius: 7em;
+  -moz-box-shadow: 0 0 2em #d7c6d4;
+  -webkit-box-shadow: 0 0 2em #d7c6d4;
+  box-shadow: 0 0 2em #d7c6d4;
+  background-color: #d7c6d4;
+
+  -webkit-animation-name: drawtechborder;
+  -webkit-animation-delay: 0s;
+  -webkit-animation-duration: 3s;
+  -webkit-animation-iteration-count: 1;
+  -webkit-animation-timing-function: ease-in-out;
+  -webkit-animation-fill-mode: forwards;
 }
 
 .led-container-hire:hover > .led-hire{
