--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -85,6 +85,13 @@
               </a>
             </div>
 
+            <div class="led-container-hire">
+              <div class="led-hire"></div>
+              <a id="led-overlay-hire" href="#hireSection">
+                <div id="nav-hover-title-hire">HIRE ME</div>
+              </a>
+            </div>
+
 
             <div class="inner-glow-career"></div>
             <div class="face"></div>
