--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,45 +31,6 @@
     <div class="flex-container">
       <section class="flex-left">
         <nav class="large-nav">
-          <!-- <ul class="square-grid">
-            <li class="square-grid-item">
-              <div class="border-animation-container">
-                <a class="nav-link table" href="#careerTimelineSection" target="_self">
-                  <div class="table-cell table-cell-career">
-                    <div class="title">CAREER</div>
-                  </div>
-                </a>
-              </div>
-            </li>
-
-            <li class="square-grid-item">
-              <div class="border-animation-container">
-                <a class="nav-link table" href="#technologiesSection" target="_self">
-                  <div class="table-cell table-cell-tech-stack">
-                    <div class="title">TECH STACK</div>
-                  </div>
-                </a>
-              </div>
-            </li>
-            <li class="square-grid-item">
-              <div class="border-animation-container">
-                <a class="nav-link table" href="#projectsSection" target="_self">
-                  <div class="table-cell table-cell-projects">
-                    <div class="title">PROJECTS</div>
-                  </div>
-                </a>
-              </div>
-            </li>
-            <li class="square-grid-item">
-              <div class="border-animation-container">
-                <a class="nav-link table" href="#hireSection" target="_self">
-                  <div class="table-cell table-cell-hire">
-                    <div class="title">HIRE</div>
-                  </div>
-                </a>
-              </div>
-            </li>
-          </ul> -->
           <div class="ring">
             <div class="led-container-career">
               <div class="led-career"></div>
@@ -92,6 +53,12 @@
               </a>
             </div>
 
+            <div class="led-container-projects">
+              <div class="led-projects"></div>
+              <a id="led-overlay-projects" href="#projectsSection">
+                <div id="nav-hover-title-projects">PROJECTS</div>
+              </a>
+            </div>
 
             <div class="inner-glow-career"></div>
             <div class="face"></div>
