--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -128,19 +128,6 @@ li.square-grid-item a {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-
-/*.table-cell-white-top{
-  background-color: rgba(255,255,255,0.5);
-  height:75px;
-  margin-bottom: -3px;
-  width: 100%;
-}
-.table-cell-white-bottom{
-  background-color: rgba(255,255,255,0.5);
-  height:78px;
-  width: 100%;
-}*/
-
 #topSection {
   position: relative;
 }
@@ -404,8 +391,8 @@ body {
 #nav-hover-title-career {
   position: absolute;
   color: white;
-  bottom: 0;
-  left: 0;
+  bottom: 10px;
+  left: -50px;
   z-index: 3;
   display: none;
 }
@@ -509,7 +496,7 @@ body {
   }
   26%, 38%, 40%, 44%, 46%, 48% {
     color: #fff;
-    text-shadow: 0 0 10px #fff, 0 0 20px #ff0, 0 0 30px #ff0;
+    text-shadow: 0 0 10px #fff, 0 0 20px #d7c6d4, 0 0 30px #d7c6d4;
   }
 }
 
@@ -544,8 +531,8 @@ body {
 #nav-hover-title-tech {
   position: absolute;
   color: white;
-  top: 0;
-  left: 0;
+  top: 10px;
+  left: -60px;
   z-index: 3;
   display: none;
 }
@@ -598,7 +585,6 @@ body {
 }
 
 
-
 .led-container-hire {
   height: 7em;
   width: 7em;
@@ -610,12 +596,11 @@ body {
 #nav-hover-title-hire {
   position: absolute;
   color: white;
-  top: 0;
-  right: 0;
+  top: 10px;
+  right: -40px;
   z-index: 3;
   display: none;
 }
-
 
 #led-overlay-hire {
   width: 100%;
@@ -662,5 +647,70 @@ body {
 }
 
 .led-container-hire:hover > .led-hire{
+  display:block;
+}
+
+.led-container-projects {
+  height: 7em;
+  width: 7em;
+  position: absolute;
+  bottom: 0;
+  right:0;
+}
+
+#nav-hover-title-projects {
+  position: absolute;
+  color: white;
+  bottom: 10px;
+  right: -60px;
+  z-index: 3;
+  display: none;
+}
+
+#led-overlay-projects {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 10;
+}
+
+#led-overlay-projects:hover>#nav-hover-title-projects {
+  color: white;
+  z-index: 1000;
+  text-shadow: 0 0 10px rgba(215, 198, 212, 1), 0 0 20px rgba(215, 198, 212, 1), 0 0 30px rgba(215, 198, 212, 1), 0 0 40px rgba(215, 198, 212, 1), 0 0 70px rgba(215, 198, 212, 1), 0 0 80px rgba(215, 198, 212, 1), 0 0 100px rgba(215, 198, 212, 1);
+  /*display:none;*/
+  display: block;
+  -moz-animation: ontheblink 5s 1;
+  -ms-animation: ontheblink 5s 1;
+  -webkit-animation: ontheblink 5s 1;
+  -moz-animation: ontheblink 5s 1;
+  -ms-animation: ontheblink 5s 1;
+  -webkit-animation: ontheblink 5s 1;
+}
+
+.led-projects {
+  display:none;
+  height: 7em;
+  width: 7em;
+  z-index: -4;
+  -moz-border-radius-bottomright: 7em;
+  -webkit-border-bottom-right-radius: 7em;
+  border-bottom-right-radius: 7em;
+  -moz-box-shadow: 0 0 2em #d7c6d4;
+  -webkit-box-shadow: 0 0 2em #d7c6d4;
+  box-shadow: 0 0 2em #d7c6d4;
+  background-color: #d7c6d4;
+
+  -webkit-animation-name: drawtechborder;
+  -webkit-animation-delay: 0s;
+  -webkit-animation-duration: 3s;
+  -webkit-animation-iteration-count: 1;
+  -webkit-animation-timing-function: ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+}
+
+.led-container-projects:hover > .led-projects{
   display:block;
 }
