--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,6 +32,11 @@
       <section class="flex-left">
         <nav class="large-nav">
           <div class="ring">
+
+            <object class="nav-icon" data="/assets/images/ic_navigation_white_24px.svg" type="image/svg+xml">
+              <img src="yourfallback.jpg" />
+            </object>
+
             <div class="led-container-career">
               <div class="led-career"></div>
               <a id="led-overlay-career" href="#careerTimelineSection">
@@ -61,6 +66,8 @@
             </div>
 
             <div class="inner-glow-career"></div>
+            <!-- <div class="inner-glow-hire"></div> -->
+
             <div class="face"></div>
           </div>
 
@@ -69,8 +76,10 @@
       <section class="flex-right">
         <img src="assets/images/avatar2.jpg" class="avatar">
         <h1>{{title}} &nbsp;<span class="cursor">&nbsp;</span></h1>
-        <small>BCompSci, BSc(Pharm)</small>
-        <p>Android Developer, Web Developer</p>
+        <div>
+          <small>BCompSci, BSc(Pharm)</small>
+          <p>Android Developer, Web Developer</p>
+        </div>
       </section>
     </div>
 
