--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -88,11 +88,6 @@ li.square-grid-item a {
   text-align: center;
   padding: 0;
   margin: 0;
-  /*transform: scale(2,3);
-  -webkit-transform: scale(1,1.5);
-  -moz-transform: scale(2,3);
-  -ms-transform: scale(2,3);
-  -o-transform: scale(2,3);*/
 }
 
 .table {
@@ -133,16 +128,23 @@ li.square-grid-item a {
 }
 
 #topSection h1 {
+  color: white;
   font-size: 2.2em;
   font-family: 'Euphoria Script', cursive;
   margin: 0;
-  overflow: hidden;
+  padding: 8px;
   position: relative;
+  text-shadow: 0 0 40px rgba(215, 198, 212, 0.5), 0 0 80px rgba(215, 198, 212, 0.5), 0 0 50px rgba(215, 198, 212, 0.5), 0 0 50px rgba(215, 198, 212, 0.5), 0 0 60px rgba(215, 198, 212, 0.5), 0 0 80px rgba(215, 198, 212, 0.5), 0 0 80px rgba(215, 198, 212, 0.5);
 }
 
 #topSection p {
   font-size: 1.5em;
   margin: 0;
+}
+
+.flex-right div {
+  padding: 12px;
+  color: white;
 }
 
 
@@ -280,7 +282,6 @@ li.square-grid-item a {
 
 
 /* For scrollspy */
-
 #scrollspy-menu {
   position: fixed;
   right: 16px;
@@ -309,8 +310,8 @@ li.square-grid-item a {
 }
 
 .scrollspy-menu__anchor--true {
-  background: #ABFF00;
-  box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, inset #89FF00 0 -1px 9px, #89FF00 0 2px 12px;
+  background: #fff;
+  box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, inset #d7c6d4 0 -1px 9px, #fff 0 2px 12px;
 }
 
 .scrollspy-menu__anchor--false {
@@ -367,6 +368,19 @@ body {
   background: linear-gradient(to bottom, #050505, #060609);
 }
 
+.nav-icon {
+  color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  z-index: 1000;
+  width: 50px;
+  -webkit-filter: drop-shadow( -1px 0px 15px #d7c6d4);
+  filter: drop-shadow( -1px 0px 15px #d7c6d4);
+}
+
 .led-container-career {
   height: 7em;
   width: 7em;
@@ -375,7 +389,7 @@ body {
 }
 
 .led-career {
-  display:none;
+  display: none;
   height: 7em;
   width: 7em;
   z-index: -4;
@@ -406,6 +420,21 @@ body {
   -moz-border-radius-bottomleft: 7em;
   -webkit-border-bottom-left-radius: 7em;
   border-bottom-left-radius: 7em;
+  -moz-box-shadow: inset 0 0 2em rgba(215, 198, 212, 0.5), 0 0 2em rgba(215, 198, 212, 0.75);
+  -webkit-box-shadow: inset 0 0 2em rgba(215, 198, 212, 0.5), 0 0 2em rgba(215, 198, 212, 0.75);
+  box-shadow: inset 0 0 2em rgba(215, 198, 212, 0.5), 0 0 2em rgba(215, 198, 212, 0.75);
+  background-color: transparent;
+}
+
+.inner-glow-hire {
+  height: 6.72em;
+  width: 6.72em;
+  position: absolute;
+  top: 0;
+  right: 0.3em;
+  -moz-border-radius-topright: 7em;
+  -webkit-border-top-right-radius: 7em;
+  border-top-right-radius: 7em;
   -moz-box-shadow: inset 0 0 2em rgba(215, 198, 212, 0.5), 0 0 2em rgba(215, 198, 212, 0.75);
   -webkit-box-shadow: inset 0 0 2em rgba(215, 198, 212, 0.5), 0 0 2em rgba(215, 198, 212, 0.75);
   box-shadow: inset 0 0 2em rgba(215, 198, 212, 0.5), 0 0 2em rgba(215, 198, 212, 0.75);
@@ -508,7 +537,7 @@ body {
 }
 
 .led-tech {
-  display:none;
+  display: none;
   height: 7em;
   width: 7em;
   z-index: -4;
@@ -519,7 +548,6 @@ body {
   -webkit-box-shadow: 0 0 2em #d7c6d4;
   box-shadow: 0 0 2em #d7c6d4;
   background-color: #d7c6d4;
-
   -webkit-animation-name: drawtechborder;
   -webkit-animation-delay: 0s;
   -webkit-animation-duration: 3s;
@@ -576,21 +604,20 @@ body {
   -webkit-animation: ontheblink 5s 1;
 }
 
-.led-container-career:hover > .led-career {
-  display:block;
+.led-container-career:hover>.led-career {
+  display: block;
 }
 
-.led-container-tech:hover > .led-tech{
-  display:block;
+.led-container-tech:hover>.led-tech {
+  display: block;
 }
-
 
 .led-container-hire {
   height: 7em;
   width: 7em;
   position: absolute;
   top: 0;
-  right:0;
+  right: 0;
 }
 
 #nav-hover-title-hire {
@@ -626,7 +653,7 @@ body {
 }
 
 .led-hire {
-  display:none;
+  display: none;
   height: 7em;
   width: 7em;
   z-index: -4;
@@ -637,7 +664,6 @@ body {
   -webkit-box-shadow: 0 0 2em #d7c6d4;
   box-shadow: 0 0 2em #d7c6d4;
   background-color: #d7c6d4;
-
   -webkit-animation-name: drawtechborder;
   -webkit-animation-delay: 0s;
   -webkit-animation-duration: 3s;
@@ -646,8 +672,8 @@ body {
   -webkit-animation-fill-mode: forwards;
 }
 
-.led-container-hire:hover > .led-hire{
-  display:block;
+.led-container-hire:hover>.led-hire {
+  display: block;
 }
 
 .led-container-projects {
@@ -655,7 +681,7 @@ body {
   width: 7em;
   position: absolute;
   bottom: 0;
-  right:0;
+  right: 0;
 }
 
 #nav-hover-title-projects {
@@ -691,7 +717,7 @@ body {
 }
 
 .led-projects {
-  display:none;
+  display: none;
   height: 7em;
   width: 7em;
   z-index: -4;
@@ -702,7 +728,6 @@ body {
   -webkit-box-shadow: 0 0 2em #d7c6d4;
   box-shadow: 0 0 2em #d7c6d4;
   background-color: #d7c6d4;
-
   -webkit-animation-name: drawtechborder;
   -webkit-animation-delay: 0s;
   -webkit-animation-duration: 3s;
@@ -711,6 +736,6 @@ body {
   -webkit-animation-fill-mode: forwards;
 }
 
-.led-container-projects:hover > .led-projects{
-  display:block;
+.led-container-projects:hover>.led-projects {
+  display: block;
 }
